Stop using Georgia, as numbers are hard to read
The numbers in Georgia reach above (8) and below (5, 9) the line or are
small (1, 2). Users find it hard to read.

--- a/euctr/static/scss/_variables.scss
+++ b/euctr/static/scss/_variables.scss
@@ -52,7 +52,7 @@ $link-hover-decoration: underline !default;
 //## Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:  "News Cycle", "Arial Narrow Bold", sans-serif !default;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
+$font-family-serif:       "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-serif !default;
